CMP - Option List View: Corrected vertical alignment for slider switch component

--- a/src/component/view/option-list/style.scss
+++ b/src/component/view/option-list/style.scss
@@ -69,5 +69,9 @@
         td:not([colspan]) {
             @include gen-tb-cells-width( (65, 80, (270, 2), 220, (75, 3), (50, 3)) );
         }
+
+        .slider-switch {
+            display: flex;
+        }
     }
 }
